--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="d-flex">
-    <div class="cover-container d-flex w-100 h-100">
+    <div class="cover-container d-flex w-100">
 
         <header class="mb-auto">
             <img src="./assets/coffee.png" alt="Promoção">
