--- a/index.html
+++ b/index.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="h-100">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 
     <title>Landing Page - Hiring Coders</title>
 </head>
-<body class="d-flex h-100 text-center text-white">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+
+<body class="d-flex">
+    <div class="cover-container d-flex w-100">
 
         <header class="mb-auto">
             <img src="./assets/coffee.png" alt="Promoção">
-          </header>
-    
-    <main class="px-3" id="content">
-        <h1>Estamos chegando.</h1>
-        <p class="lead">Deixe aqui seu email para descontos incríveis.</p>
-        <p class="lead">
+        </header>
+
+        <main class="content" id="content">
+            <h1>Estamos chegando.</h1>
+            <p class="lead">Deixe aqui seu email para descontos incríveis.</p>
+            <p class="lead">
             <form id="form">
                 <div class="form-floating">
-                    <input type="text" placeholder="Nome" id="nome">
                     <label for="nome">Nome</label>
+                    <input type="text" placeholder="Nome" id="nome">
                 </div>
                 <div class="form-floating">
-                    <input type="email" placeholder="nome@provedor.com" id="email">
                     <label for="email">E-mail</label>
+                    <input type="email" placeholder="nome@provedor.com" id="email">
                 </div>
-                <input type="submit" value="Enviar" class="btn btn-lg btn-secondary fw-bold border-white bg-white">
+                <input type="submit" value="Enviar" class="btn btn-secondary">
             </form>
-        </p>
-      </main>
-    <footer class="mt-auto text-white-50">
-        <p>Todos os direitos reservados</p>
-    </footer>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
-    
+            </p>
+        </main>
+
+        <footer>
+            <p>Todos os direitos reservados</p>
+        </footer>
+    </div>
+
+    <script src="./js/script.js"></script>
+
 </body>
 </html>
